# xml2json

./: .pre-commit-config.yaml  README.md  pyproject.toml  test_xml2json.py  xml2json  xml2json.py
