[tool.poetry]
name = "xml2json"
version = "0.1.0"

description = ""
authors = ["Pony Ma <mtf201013@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pre-commit-hooks = "^4.3.0"
pre-commit = "^2.20.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
